# limitless-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: archlinux.yml  build.yml  macos-build.yml  ubuntu-build.yml  web-build.yml  windows-build.yml
assets/textures/: 1_compressed.dds  compressed  glow.tga  true_fire.tga  true_noise.tga
demo/: assets.cpp  assets.hpp  cube.cpp  demo.cpp  effects_demoscene.cpp  effects_demoscene.hpp  extensions.txt  lighting_demoscene.cpp  lighting_demoscene.hpp  materials.cpp  materials_demoscene.cpp  materials_demoscene.hpp  models_demoscene.cpp  models_demoscene.hpp  scene.hpp  sponza_demoscene.cpp  sponza_demoscene.hpp  triangle.cpp
docs/: batching.md  materials.md
include/: abstract_instance.hpp  asset_loader.hpp  assets.hpp  bindless_texture.hpp  bindless_texture_storage.hpp  buffer.hpp  buffer_builder.hpp  camera.hpp  context.hpp  context_debug.hpp  context_initializer.hpp  context_observer.hpp  context_state.hpp  custom_material.hpp  custom_material_builder.hpp  distribution.hpp  effect.hpp  effect_attachable.hpp  effect_builder.hpp  effect_compiler.hpp  effect_instance.hpp  effect_renderer.hpp  elementary_instance.hpp  elementary_model.hpp  emitter.hpp  emitter_buffer.hpp  emitter_module.hpp  emitter_renderer.hpp  emitter_spawn.hpp  emitter_visiter.hpp  filesystem.hpp  font_atlas.hpp  framebuffer.hpp  indexed_buffer.hpp  indexed_mesh.hpp  light_attachable.hpp  light_container.hpp  lighting.hpp  lights.hpp  material.hpp  (+43 more)
include/core/: bindless_texture.hpp  buffer.hpp  buffer_builder.hpp  context.hpp  context_debug.hpp  context_initializer.hpp  context_observer.hpp  context_state.hpp  context_thread_pool.hpp  extension_texture.hpp  framebuffer.hpp  immutable_texture.hpp  indexed_buffer.hpp  mutable_texture.hpp  named_buffer.hpp  named_texture.hpp  shader.hpp  shader_compiler.hpp  shader_program.hpp  state_buffer.hpp  state_texture.hpp  texture.hpp  texture_binder.hpp  texture_builder.hpp  texture_visitor.hpp  triple_buffer.hpp  uniform.hpp  vertex.hpp  vertex_array.hpp
include/limitless/: abstract_instance.hpp  asset_loader.hpp  assets.hpp  camera.hpp  effect_attachable.hpp  effect_instance.hpp  elementary_instance.hpp  elementary_model.hpp  font_atlas.hpp  indexed_mesh.hpp  light_attachable.hpp  lighting.hpp  log.hpp  mesh.hpp  mesh_instance.hpp  model.hpp  model_instance.hpp  model_loader.hpp  postprocessing.hpp  render.hpp  render_settings.hpp  renderer.hpp  scene.hpp  scene_data.hpp  shader_storage.hpp  shader_types.hpp  skeletal_instance.hpp  skeletal_model.hpp  skinned_mesh.hpp  skybox.hpp  text_instance.hpp  texture_loader.hpp  threaded_model_loader.hpp
include/material_system/: custom_material.hpp  custom_material_builder.hpp  material.hpp  material_builder.hpp  material_compiler.hpp  material_instance.hpp  material_loader.hpp  properties.hpp
include/particle_system/: distribution.hpp  effect_builder.hpp  effect_compiler.hpp  effect_loader.hpp  effect_renderer.hpp  effect_serializer.hpp  emitter.hpp  emitter_module.hpp  emitter_renderer.hpp  emitter_spawn.hpp  emitter_visitor.hpp  mesh_emitter.hpp  particle.hpp  sprite_emitter.hpp  unique_emitter.hpp
include/util/: bytebuffer.hpp  bytereader.hpp  bytewriter.hpp  filesystem.hpp  math.hpp  serializer.hpp  thread_pool.hpp  tree.hpp
samples/: CMakeLists.txt
samples/effects/: assets.cpp  assets.hpp  main.cpp  scene.cpp  scene.hpp
samples/gltf_viewer/: gltf_viewer.cpp
samples/lighting/: assets.cpp  assets.hpp  main.cpp  scene.cpp  scene.hpp
samples/materials/: assets.cpp  main.cpp  scene.cpp  scene.hpp
samples/terrain/: assets.cpp  main.cpp  scene.cpp  scene.hpp
shaders/: main.fs
shaders/demo/: cube.fs  cube.vs  triangle.fs  triangle.vs
shaders/effects/: beam_emitter.fs  beam_emitter.vs  beam_emitter_csm.fs  beam_emitter_csm.vs  beam_vertex_stream.glsl  emitter.fs  emitter.vs  mesh_emitter.fs  mesh_emitter.vs  mesh_emitter_csm.fs  mesh_emitter_csm.vs  mesh_vertex_stream.glsl  sprite_CSM.vs  sprite_emitter.fs  sprite_emitter.vs  sprite_emitter_csm.fs  sprite_emitter_csm.vs  sprite_vertex_stream.glsl
shaders/functions/: BxDF.glsl  base_color.glsl  brdf.glsl  brdf_ctx.glsl  (+26 more)
shaders_ref/: API.md  scene.glsl
src/: abstract_instance.cpp  asset_loader.cpp  assets.cpp  bindless_texture.cpp  bindless_texture_storage.cpp  buffer.cpp  buffer_builder.cpp  camera.cpp  context.cpp  context_debug.cpp  context_initializer.cpp  context_observer.cpp  context_state.cpp  cumstom_material_builder.cpp  custom_material.cpp  custom_material_builder.cpp  effect.cpp  effect_attachable.cpp  effect_builder.cpp  effect_compiler.cpp  effect_instance.cpp  effect_renderer.cpp  elementary_instance.cpp  elementary_model.cpp  emitter.cpp  emitter_buffer.cpp  emitter_module.cpp  emitter_renderer.cpp  emitter_spawn.cpp  emitter_visiter.cpp  extensions.txt  font_atlas.cpp  framebuffer.cpp  indexed_buffer.cpp  light_attachable.cpp  light_container.cpp  lighting.cpp  material.cpp  material_builder.cpp  material_compiler.cpp  (+31 more)
test/: buffer_test.cpp  cgltf_test.cpp  material_loader_test.cpp  uniform_serializer_test.cpp
tests/: CMakeLists.txt  buffer_test.cpp  bytebuffer_test.cpp  catch_amalgamated.hpp  effect_serializer_test.cpp  material_loader_test.cpp  material_serializer_test.cpp  opengl_debug.hpp  texture_tests.cpp  uniform_serializer_test.cpp
tests/core/: texture_tests.cpp
tests/limitless/: opengl_state.hpp
tests/limitless/assets/: sc2.frag  shader4.vert  shader5.vert  shader6.vert  shader7.vert  shader8.vert
tests/limitless/assets/test_dir/: test_include.glsl
tests/limitless/core/: context_test.cpp  shader_compiler_test.cpp  shader_test.cpp  state_buffer_test.cpp  state_texture_test.cpp  texture_builder_test.cpp  uniform_test.cpp
tests/limitless/instance/: instance_attachment_test.cpp  model_instance_test.cpp  skeletal_instance_test.cpp  socket_attachment_test.cpp
tests/limitless/ms/: material_builder_test.cpp  material_compiler_test.cpp  material_test.cpp
tests/limitless/util/: textures.hpp
(+978 files in other folders)
